# readers-publications-server

./: .dockerignore  .gitignore  Dockerfile  docker-compose-dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
author/: admin.py  models.py  serializers.py  urls.py  views.py
author/migrations/: 0001_initial.py  0002_initial.py
blog/: admin.py  models.py  serializers.py  urls.py  views.py
blog/migrations/: 0001_initial.py
book/: admin.py  models.py  urls.py
book/migrations/: 0001_initial.py  0002_initial.py
book/serializers/: book.py  category.py  special_package.py
book/views/: book.py  category.py  special_package.py
cart/: admin.py  models.py  serializers.py  urls.py  views.py
cart/migrations/: 0001_initial.py  0002_initial.py
config/: celery.py  db.sqlite3  urls.py
config/settings/: __init__.py  base.py  development.py  production.py
core/: admin.py  dashboard.py  models.py  pagination.py  serializers.py  tasks.py  urls.py
core/migrations/: 0001_initial.py
core/views/: __init__.py  carousel.py  general_data.py  home.py  testimonial.py
order/: admin.py  models.py  serializers.py  urls.py  views.py
order/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_initial.py
payment/: models.py
payment/migrations/: 0001_initial.py  0002_initial.py
shipping/: admin.py  models.py  serializers.py  urls.py  views.py
shipping/migrations/: 0001_initial.py  0002_initial.py
user/: admin.py  authentication.py  serializers.py  signals.py  urls.py
utils/: general_data.py  general_func.py  helper_func.py
(+24 files in other folders)
